--- a/index.html
+++ b/index.html
@@ -87,34 +87,41 @@
                 </section>
                  <section>
                 <div class="row text-center">
-
                     <div class="col-md-4">
                         <figure>
-        <img class="img-responsive" src="img/art.jpg" alt="Art" >
-        <figcaption>Art is the daughter of freedom </figcaption>
+                                <img class="img-responsive" src="img/art.jpg" alt="Art" >
+                            <figcaption>Art is the daughter of freedom </figcaption>
                         </figure>
-        <h3 class="text-danger text-uppercase ">Art</h3>
-        <a href="#">link</a>
-    </div>
-    <div class="col-md-4">
-        <figure>
-        <img class="img-responsive" src="img/rainbow.jpg" alt="Rainbow">
-        <figcaption>Try to be rainbow in someone's cloud </figcaption>
+                        <h3 class="text-danger text-uppercase ">Art</h3>
+                        <a href="#">link</a>
+                    </div>
+                    <div class="col-md-4">
+                        <figure>
+                                <img class="img-responsive" src="img/rainbow.jpg" alt="Rainbow">
+                            <figcaption>Try to be rainbow in someone's cloud </figcaption>
                         </figure>
-        <h3 class="text-danger text-uppercase ">Rainbow</h3>
-        <a href="#">Link</a>
-    </div>
-    <div class="col-md-4">
-        <figure>
-        <img class="img-responsive" src="img/dance.jpg" alt="Dance">
-        <figcaption>Dance is the hidden langauge of the soul </figcaption>
+                        <h3 class="text-danger text-uppercase ">Rainbow</h3>
+                        <a href="#">Link</a>
+                    </div>
+                    <div class="col-md-4 three_image">
+                        <figure>
+                                <img class="img-responsive" src="img/dance.jpg" alt="Dance">
+                            <figcaption>Dance is the hidden langauge of the soul </figcaption>
                         </figure>
-        <h3 class="text-danger text-uppercase ">Dance</h3>
-        <a href="#">Link</a>
-    </div>
+                        <h3 class="text-danger text-uppercase ">Dance</h3>
+                        <a href="#">Link</a>
+                    </div>
                 </div><!--row-->
             </section>
         </main>
+    </div> <!-- container div close -->
+    <footer class="footer">
+        <div id="social">
+            <a href="https://twitter.com" class="zocial-twitter"></a>
+            <a href="https://www.facebook.com" class="zocial-facebook"></a>
+            <a href="https://plus.google.com" class="zocial-googleplus"></a>
+            <a href="http://digg.com" class="zocial-linkedin"></a>
         </div>
+  </footer>
     </body>
 </html>
