--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- unicode characters -->
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE-edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- viewport -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Anum Portfolio">
@@ -26,12 +26,12 @@
         <div class="container">
             <header>
                 <div class="row">
-                    <div class="col-md-2 box">
+                    <div class="col-md-2">
                         <img class="img-responsive" src="udacity-logo.png" alt="udacity logo">
                     </div> <!-- col-md-2 close -->
-                    <div class="col-md-10  box text-right  text-uppercase ">
+                    <div class="col-md-10 text-right  text-uppercase ">
                         <h1 class="text-primary">Anum Sharma</h1>
-                        <h4 class="text-primary">Full-Stack Novice</h4>
+                        <h3 class="text-primary">Full-Stack Novice</h3>
                     </div> <!-- col-md-10 close -->
                 </div>
                 </header><!--row close-->
@@ -70,9 +70,9 @@
                     <div class="col-md-12">
                         <figure>
                                 <picture>
-                                    <source media="(min-width: 750x)" class="center-block"srcset="dest/technology-1200_large_2x.jpg 2x, dest/technology-800_large_1x.jpg 1x" />
-                                    <source media="(max-width: 749px)" class="center-block"srcset="dest/technology-600_medium.jpg" />
-                                    <img class="img-responsive middle-img" class="center-block" src="dest/technology-1200_large_2x.jpg"  alt="technology image">
+                                <source media="(min-width: 750px)" class="center-block" srcset="dest/bodytag-1200_large_2x.jpg 2x, dest/bodytag-800_large_1x.jpg 1x" />
+                                <source media="(max-width: 749px)" class="center-block" srcset="dest/bodytag-600_medium.jpg" />
+                            <img class="img-responsive middle-img center-block" src="img/bodytag.jpg"  alt="technology image">
                                 </picture>
                             <figcaption> Humanity is acquiring all the right technology for all the wrong reasons  </figcaption>
                         </figure>
@@ -85,9 +85,9 @@
                         </div> <!-- col-md-12 close -->
                     </div><!--row close -->
                 </section>
-                 <section>
+                 <section class="images">
                 <div class="row text-center">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 items">
                         <figure>
                                 <img class="img-responsive" src="img/art.jpg" alt="Art" >
                             <figcaption>Art is the daughter of freedom </figcaption>
@@ -95,7 +95,7 @@
                         <h3 class="text-danger text-uppercase ">Art</h3>
                         <a href="#">link</a>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <figure>
                                 <img class="img-responsive" src="img/rainbow.jpg" alt="Rainbow">
                             <figcaption>Try to be rainbow in someone's cloud </figcaption>
@@ -103,24 +103,24 @@
                         <h3 class="text-danger text-uppercase ">Rainbow</h3>
                         <a href="#">Link</a>
                     </div>
-                    <div class="col-md-4 three_image">
+                    <div class="col-md-4 col-sm-6 three_image">
                         <figure>
                                 <img class="img-responsive" src="img/dance.jpg" alt="Dance">
                             <figcaption>Dance is the hidden langauge of the soul </figcaption>
                         </figure>
-                        <h3 class="text-danger text-uppercase ">Dance</h3>
+                        <h3 class="text-danger text-uppercase">Dance</h3>
                         <a href="#">Link</a>
                     </div>
                 </div><!--row-->
             </section>
         </main>
     </div> <!-- container div close -->
-    <footer class="footer">
+    <footer class="text-center">
         <div id="social">
             <a href="https://twitter.com" class="zocial-twitter"></a>
             <a href="https://www.facebook.com" class="zocial-facebook"></a>
             <a href="https://plus.google.com" class="zocial-googleplus"></a>
-            <a href="http://digg.com" class="zocial-linkedin"></a>
+            <a href="https://www.linkedin.com" class="zocial-linkedin"></a>
         </div>
   </footer>
     </body>
